<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Game.GameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="262dp"
                android:contentDescription="@string/rick_and_morty_image"
                android:src="@drawable/rnm02"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="392dp"
                android:layout_height="191dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtDisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <ImageView
                android:id="@+id/rightImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/right_image"
                android:src="@drawable/right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.708" />

            <ImageView
                android:id="@+id/wrongone"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/wrong_image"
                android:src="@drawable/wrong_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.708" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.79">

                <ImageButton
                    android:id="@+id/iBtnPrev"
                    android:layout_width="70dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/previous_button"
                    android:src="@drawable/ic_baseline_navigate_before_24" />

                <RadioButton
                    android:id="@+id/RdoTrue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/trues"
                    android:textAlignment="textStart"
                    android:focusable="true" />

                <RadioButton
                    android:id="@+id/RdoFalse"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="true"
                    android:text="@string/falsing"
                    android:focusable="true" />

                <ImageButton
                    android:id="@+id/iBtnNext"
                    android:layout_width="70dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/next_button"
                    android:src="@drawable/ic_baseline_navigate_next_24" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>